tests/ui/sync-fail.stderr
error[E0308]: mismatched types
  --> $DIR/sync-fail.rs:79:15
   |
79 |     file.sync(&mut other_fs, &mut other_storage).unwrap();
   |               ^^^^^^^^^^^^^ expected struct `RamStorage`, found struct `OtherRamStorage`
   |
   = note: expected type `&mut littlefs2::fs::Filesystem<'_, RamStorage, littlefs2::fs::mount_state::Mounted>`
              found type `&mut littlefs2::fs::Filesystem<'_, OtherRamStorage, littlefs2::fs::mount_state::Mounted>`

error[E0308]: mismatched types
  --> $DIR/sync-fail.rs:79:30
   |
79 |     file.sync(&mut other_fs, &mut other_storage).unwrap();
   |                              ^^^^^^^^^^^^^^^^^^ expected struct `RamStorage`, found struct `OtherRamStorage`
   |
   = note: expected type `&mut RamStorage`
              found type `&mut OtherRamStorage`
